--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,20 +2,7 @@ version: '3.3'
 
 services:         
 
-    db:
-        image: mysql:5.7
-        restart: always
-        environment: 
-            MYSQL_DATABASE: 'project-db'
-            MYSQL_USER: 'user'
-            MYSQL_PASSWORD: 'microservice-pass'
-            MYSQL_ROOT_PASSWORD: 'microservice-pass'   
-        ports: 
-            - '3306:3306'
-        expose: 
-            - '3306'
-        volumes: 
-            - my-db:/var/lib/mysql
+
 
     microservice-auth:
         build: 
@@ -24,6 +11,7 @@ services:
         restart: always
         environment:
             NODE_ENV: ${NODE_ENV}
+            NODE_PORT: 3001
             DB_DATABASE: ${DB_DATABASE}
             DB_USER: ${DB_USER}
             DB_PASSWORD: ${DB_PASSWORD}
@@ -35,6 +23,21 @@ services:
         depends_on: 
             - redis
             - db
+
+    db:
+        image: mysql:5.7
+        restart: always
+        environment: 
+            MYSQL_DATABASE: 'project-db'
+            MYSQL_USER: 'user'
+            MYSQL_PASSWORD: 'microservice-pass'
+            MYSQL_ROOT_PASSWORD: 'microservice-pass'   
+        ports: 
+            - '3306'
+        expose: 
+            - '3306'
+        volumes: 
+            - my-db:/var/lib/mysql            
 
     redis:
         image: "redis:alpine"
