--- a/.env
+++ b/.env
@@ -4,3 +4,15 @@ DB_DATABASE=project-db
 DB_USER=user
 DB_PASSWORD=microservice-pass
 DB_HOST=localhost
+
+TYPEORM_CONNECTION = mysql
+TYPEORM_HOST = localhost
+TYPEORM_USERNAME = user
+TYPEORM_PASSWORD = microservice-pass
+TYPEORM_DATABASE = project-db
+TYPEORM_PORT = 3306
+TYPEORM_SYNCHRONIZE = true
+TYPEORM_LOGGING = true
+TYPEORM_ENTITIES = src/**/*.entity.ts
+TYPEORM_MIGRATIONS_DIR=src/migrations
+TYPEORM_MIGRATIONS=src/migrations/*.ts
