--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@nestjs/graphql": "^7.4.1",
     "@nestjs/passport": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
+    "@types/bcrypt": "^3.0.0",
+    "apollo-server-express": "^2.14.5",
     "graphql": "^15.1.0",
     "graphql-tools": "^6.0.10",
     "mysql": "^2.18.1",
