--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "@nestjs/graphql": "^7.4.1",
     "@nestjs/passport": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
-    "@types/bcrypt": "^3.0.0",
     "apollo-server-express": "^2.14.5",
+    "bcrypt": "^5.0.0",
     "graphql": "^15.1.0",
     "graphql-tools": "^6.0.10",
     "mysql": "^2.18.1",
@@ -43,6 +43,7 @@
     "@nestjs/cli": "^7.0.0",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
+    "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.3",
     "@types/jest": "25.2.3",
     "@types/node": "^13.9.1",
